# ThinkChess

./: .gitignore  CMakeLists.txt  README.md
app/: display.cpp  initial.txt  main.cpp  moves.cpp  pieces.cpp  position.cpp
datastructures/include/: list.hpp  tree.hpp
doc/: Display.md  Display.tex  Gui.tex  Main.tex  Play.md  Play.tex  ThinkChess++.tex  ThinkChess.html  template.css
docs/: GUI.md  Play.md  html.yaml  index.html  template.html
games/: ScholarsMate  last.txt  minorPieces  scholarsMate.txt
include/: display.hpp  moves.hpp  pieces.hpp  position.hpp
